[gd_scene load_steps=83 format=3 uid="uid://22xs2nf7hfew"]

[ext_resource type="PackedScene" uid="uid://dao4cui0qcwt8" path="res://common/ui/bg.tscn" id="1_4exc4"]
[ext_resource type="Shader" uid="uid://bqb75j0d5opfs" path="res://common/shaders/white_outline.gdshader" id="1_16406"]
[ext_resource type="Texture2D" uid="uid://byyt4l0dc0om" path="res://scientist/assets/full_sprite.png" id="2_20w5x"]
[ext_resource type="Texture2D" uid="uid://vnmijkvwgjni" path="res://scientist/assets/bar_panel.png" id="3_bea00"]
[ext_resource type="Script" uid="uid://dtat7v5i0c481" path="res://scientist/bar_panel.gd" id="4_ova6q"]
[ext_resource type="PackedScene" uid="uid://dscn6aqto3mpm" path="res://scientist/bar/bar.tscn" id="4_s7j24"]
[ext_resource type="Texture2D" uid="uid://dlqmailv3r42h" path="res://scientist/upgrades/damage.png" id="5_bea00"]
[ext_resource type="Texture2D" uid="uid://dpfe2i4qao6ej" path="res://scientist/upgrades/size.png" id="6_hoinn"]
[ext_resource type="Texture2D" uid="uid://n2qugkmbv0ey" path="res://scientist/upgrades/yield.png" id="7_gqo72"]
[ext_resource type="PackedScene" uid="uid://b02ya4qjvvv6d" path="res://common/ui/dialogue/speech_bubble.tscn" id="8_1gt0o"]
[ext_resource type="Texture2D" uid="uid://duwdtq3fqc88d" path="res://scientist/assets/mute_icon.png" id="8_bmi18"]
[ext_resource type="PackedScene" uid="uid://bhkbm3mlr5yiu" path="res://common/ui/upgrades/stat display/stat_display.tscn" id="8_bsxwh"]
[ext_resource type="Script" uid="uid://jh2bg5sun3aq" path="res://scientist/mute_blue.gd" id="9_actut"]
[ext_resource type="Script" uid="uid://tciv72rns5sp" path="res://common/ui/dialogue/dialogue.gd" id="9_epx1j"]
[ext_resource type="Script" uid="uid://gp7ahdsq2b84" path="res://common/ui/dialogue/dialogue_option.gd" id="10_bmi18"]
[ext_resource type="PackedScene" uid="uid://kwksnsvk5s12" path="res://common/ui/upgrades/upgrade button/upgrade_button.tscn" id="10_r447v"]
[ext_resource type="Texture2D" uid="uid://c60st7k48bjtw" path="res://scientist/upgrades/upgrade_button.png" id="11_460r2"]
[ext_resource type="Texture2D" uid="uid://co62wwml6eu6p" path="res://scientist/upgrades/upgrade_button_disabled.png" id="12_6td8o"]
[ext_resource type="Texture2D" uid="uid://uy6b30d2qyxf" path="res://common/minerals/olivine.png" id="13_kuv6f"]
[ext_resource type="Texture2D" uid="uid://yuvki33odmhg" path="res://common/minerals/disabled/olivine_disabled.png" id="14_rrjuj"]
[ext_resource type="Texture2D" uid="uid://c1ujw6wt4rac8" path="res://common/ui/close_tab/assets/close_button.png" id="15_6td8o"]
[ext_resource type="Texture2D" uid="uid://dvcpuotwnf7qw" path="res://scientist/assets/ultra_panel.png" id="16_ekw30"]
[ext_resource type="Texture2D" uid="uid://bhiuqgrp4i7l6" path="res://common/ui/close_tab/assets/close_button_down.png" id="16_kuv6f"]
[ext_resource type="Texture2D" uid="uid://51juktnd06g7" path="res://scientist/assets/upgrade_bar.png" id="16_vjdc1"]
[ext_resource type="Script" uid="uid://bcxlgiie13tst" path="res://scientist/new_portion.gd" id="17_7ufg2"]
[ext_resource type="Texture2D" uid="uid://dssigfggvpeeu" path="res://common/ui/close_tab/assets/close_button_hover.png" id="17_rrjuj"]
[ext_resource type="Texture2D" uid="uid://cbqxiuneflqcx" path="res://scientist/assets/price_hover.png" id="18_2tbd8"]
[ext_resource type="Script" uid="uid://3fl1v71e4p7i" path="res://common/ui/close_tab/close_tab.gd" id="18_ekw30"]
[ext_resource type="FontFile" uid="uid://cmwv2cvr5llki" path="res://common/fonts/BitPap.ttf" id="19_wig7y"]
[ext_resource type="Texture2D" uid="uid://qbgp7hmgi00i" path="res://scientist/upgrades/boost.png" id="21_ekw30"]
[ext_resource type="Texture2D" uid="uid://dbbygs5vvu6t" path="res://scientist/upgrades/replenish.png" id="21_trrde"]
[ext_resource type="PackedScene" uid="uid://boextoi3git5n" path="res://common/ui/position_manager/position_manager.tscn" id="28_i3aeo"]
[ext_resource type="Script" uid="uid://b7stbnudt8tpk" path="res://common/ui/position_manager/detail_node.gd" id="29_vjdc1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_42ln1"]
shader = ExtResource("1_16406")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/width = 1.0
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = true

[sub_resource type="InputEventKey" id="InputEventKey_mw7dc"]
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_trrde"]
events = [SubResource("InputEventKey_mw7dc")]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bmi18"]
shader = ExtResource("1_16406")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/width = 1.0
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = true

[sub_resource type="AtlasTexture" id="AtlasTexture_4exc4"]
atlas = ExtResource("8_bmi18")
region = Rect2(0, 0, 29, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_actut"]
atlas = ExtResource("8_bmi18")
region = Rect2(28, 0, 29, 26)

[sub_resource type="Resource" id="Resource_j7phv"]
script = ExtResource("10_bmi18")
player = "hi"
metadata/_custom_type_script = "uid://gp7ahdsq2b84"

[sub_resource type="Resource" id="Resource_4exc4"]
script = ExtResource("9_epx1j")
text = "yo"
options = Array[ExtResource("10_bmi18")]([SubResource("Resource_j7phv")])
metadata/_custom_type_script = "uid://tciv72rns5sp"

[sub_resource type="Resource" id="Resource_i3aeo"]
script = ExtResource("10_bmi18")
player = "what's your deal?"
metadata/_custom_type_script = "uid://gp7ahdsq2b84"

[sub_resource type="Resource" id="Resource_vjdc1"]
script = ExtResource("9_epx1j")
text = "thanks."
options = Array[ExtResource("10_bmi18")]([])
metadata/_custom_type_script = "uid://tciv72rns5sp"

[sub_resource type="Resource" id="Resource_kxgdl"]
script = ExtResource("10_bmi18")
player = "nice coat"
response = SubResource("Resource_vjdc1")
metadata/_custom_type_script = "uid://gp7ahdsq2b84"

[sub_resource type="Resource" id="Resource_actut"]
script = ExtResource("9_epx1j")
text = "what?"
options = Array[ExtResource("10_bmi18")]([SubResource("Resource_i3aeo"), SubResource("Resource_kxgdl")])
metadata/_custom_type_script = "uid://tciv72rns5sp"

[sub_resource type="Resource" id="Resource_7ufg2"]
script = ExtResource("10_bmi18")
player = "cool"
metadata/_custom_type_script = "uid://gp7ahdsq2b84"

[sub_resource type="Resource" id="Resource_5bi7m"]
script = ExtResource("9_epx1j")
text = "my name's jason, i'm a scientist"
options = Array[ExtResource("10_bmi18")]([SubResource("Resource_7ufg2")])
metadata/_custom_type_script = "uid://tciv72rns5sp"

[sub_resource type="Resource" id="Resource_wig7y"]
script = ExtResource("9_epx1j")
text = "uhuh"
options = Array[ExtResource("10_bmi18")]([])
metadata/_custom_type_script = "uid://tciv72rns5sp"

[sub_resource type="Resource" id="Resource_dfcw6"]
script = ExtResource("10_bmi18")
player = "i'm built different"
response = SubResource("Resource_wig7y")
metadata/_custom_type_script = "uid://gp7ahdsq2b84"

[sub_resource type="Resource" id="Resource_kwasv"]
script = ExtResource("10_bmi18")
player = "yeah :("
metadata/_custom_type_script = "uid://gp7ahdsq2b84"

[sub_resource type="Resource" id="Resource_2tbd8"]
script = ExtResource("9_epx1j")
text = "you click a lot... isn't that tiring?"
options = Array[ExtResource("10_bmi18")]([SubResource("Resource_dfcw6"), SubResource("Resource_kwasv")])
metadata/_custom_type_script = "uid://tciv72rns5sp"

[sub_resource type="Resource" id="Resource_ybg0m"]
script = ExtResource("9_epx1j")
text = "i've been working on a new invention that could be useful"
options = Array[ExtResource("10_bmi18")]([])
metadata/_custom_type_script = "uid://tciv72rns5sp"

[sub_resource type="Resource" id="Resource_mhth4"]
script = ExtResource("9_epx1j")
text = "too bad"
options = Array[ExtResource("10_bmi18")]([])
metadata/_custom_type_script = "uid://tciv72rns5sp"

[sub_resource type="Resource" id="Resource_8n20e"]
script = ExtResource("10_bmi18")
player = "can't be bothered"
response = SubResource("Resource_mhth4")
metadata/_custom_type_script = "uid://gp7ahdsq2b84"

[sub_resource type="Resource" id="Resource_d4la0"]
script = ExtResource("9_epx1j")
text = "thanks "
options = Array[ExtResource("10_bmi18")]([])
metadata/_custom_type_script = "uid://tciv72rns5sp"

[sub_resource type="Resource" id="Resource_1e8hg"]
script = ExtResource("10_bmi18")
player = "sounds fair enough"
response = SubResource("Resource_d4la0")
metadata/_custom_type_script = "uid://gp7ahdsq2b84"

[sub_resource type="Resource" id="Resource_hm7ms"]
script = ExtResource("9_epx1j")
text = "but, in return, i need you to finetune it for me"
options = Array[ExtResource("10_bmi18")]([SubResource("Resource_8n20e"), SubResource("Resource_1e8hg")])
metadata/_custom_type_script = "uid://tciv72rns5sp"

[sub_resource type="Resource" id="Resource_5oblf"]
script = ExtResource("9_epx1j")
text = "you'll have a hitbar over your mouse that slowly fills"
options = Array[ExtResource("10_bmi18")]([])
metadata/_custom_type_script = "uid://tciv72rns5sp"

[sub_resource type="Resource" id="Resource_oca6a"]
script = ExtResource("9_epx1j")
text = "the more full it is, the more damage it'll do"
options = Array[ExtResource("10_bmi18")]([])
metadata/_custom_type_script = "uid://tciv72rns5sp"

[sub_resource type="Resource" id="Resource_cp3ln"]
script = ExtResource("9_epx1j")
text = "but each time you click it'll go down a bit"
options = Array[ExtResource("10_bmi18")]([])
metadata/_custom_type_script = "uid://tciv72rns5sp"

[sub_resource type="Resource" id="Resource_p7qk3"]
script = ExtResource("9_epx1j")
text = "at the start, the hitbar will be red"
options = Array[ExtResource("10_bmi18")]([])
metadata/_custom_type_script = "uid://tciv72rns5sp"

[sub_resource type="Resource" id="Resource_u7i1c"]
script = ExtResource("9_epx1j")
text = "but you can unlock more colours that are much better"
options = Array[ExtResource("10_bmi18")]([])
metadata/_custom_type_script = "uid://tciv72rns5sp"

[sub_resource type="Resource" id="Resource_xvvjq"]
script = ExtResource("10_bmi18")
player = "what's that?"
metadata/_custom_type_script = "uid://gp7ahdsq2b84"

[sub_resource type="Resource" id="Resource_8rxbf"]
script = ExtResource("9_epx1j")
text = "each time you hit an asteroid, you'll get some olivine"
options = Array[ExtResource("10_bmi18")]([SubResource("Resource_xvvjq")])
metadata/_custom_type_script = "uid://tciv72rns5sp"

[sub_resource type="Resource" id="Resource_gv7fr"]
script = ExtResource("9_epx1j")
text = "use that to upgrade the hitbar"
options = Array[ExtResource("10_bmi18")]([])
metadata/_custom_type_script = "uid://tciv72rns5sp"

[sub_resource type="Resource" id="Resource_q8mdl"]
script = ExtResource("10_bmi18")
player = "neat"
metadata/_custom_type_script = "uid://gp7ahdsq2b84"

[sub_resource type="Resource" id="Resource_680q0"]
script = ExtResource("9_epx1j")
text = "the more asteroids you can hit at once, the more olivine you'll get each click!"
options = Array[ExtResource("10_bmi18")]([SubResource("Resource_q8mdl")])
metadata/_custom_type_script = "uid://tciv72rns5sp"

[sub_resource type="Resource" id="Resource_u5vli"]
script = ExtResource("10_bmi18")
player = "ok"
metadata/_custom_type_script = "uid://gp7ahdsq2b84"

[sub_resource type="Resource" id="Resource_wgb1c"]
script = ExtResource("9_epx1j")
text = "i don't remember lol"
options = Array[ExtResource("10_bmi18")]([])
metadata/_custom_type_script = "uid://tciv72rns5sp"

[sub_resource type="Resource" id="Resource_3twrg"]
script = ExtResource("10_bmi18")
player = "can't you just tell me"
response = SubResource("Resource_wgb1c")
metadata/_custom_type_script = "uid://gp7ahdsq2b84"

[sub_resource type="Resource" id="Resource_718em"]
script = ExtResource("9_epx1j")
text = "try to figure out the strong suits of each colour"
options = Array[ExtResource("10_bmi18")]([SubResource("Resource_u5vli"), SubResource("Resource_3twrg")])
metadata/_custom_type_script = "uid://tciv72rns5sp"

[sub_resource type="Resource" id="Resource_4qp5g"]
script = ExtResource("10_bmi18")
player = "all good!"
metadata/_custom_type_script = "uid://gp7ahdsq2b84"

[sub_resource type="Resource" id="Resource_h3170"]
script = ExtResource("10_bmi18")
player = "fair enough"
metadata/_custom_type_script = "uid://gp7ahdsq2b84"

[sub_resource type="Resource" id="Resource_jbiwf"]
script = ExtResource("9_epx1j")
text = "bruh, leave me alone and go play the damn game"
options = Array[ExtResource("10_bmi18")]([])
metadata/_custom_type_script = "uid://tciv72rns5sp"

[sub_resource type="Resource" id="Resource_oq8kw"]
script = ExtResource("10_bmi18")
player = "what kinda job do you want?"
response = SubResource("Resource_jbiwf")
metadata/_custom_type_script = "uid://gp7ahdsq2b84"

[sub_resource type="Resource" id="Resource_eprhi"]
script = ExtResource("9_epx1j")
text = "it's always good to have a cool project for your resume"
options = Array[ExtResource("10_bmi18")]([SubResource("Resource_h3170"), SubResource("Resource_oq8kw")])
metadata/_custom_type_script = "uid://tciv72rns5sp"

[sub_resource type="Resource" id="Resource_fwfcy"]
script = ExtResource("10_bmi18")
player = "why did you make this?"
response = SubResource("Resource_eprhi")
metadata/_custom_type_script = "uid://gp7ahdsq2b84"

[sub_resource type="Resource" id="Resource_lrqer"]
script = ExtResource("9_epx1j")
text = "appreciate the help!"
options = Array[ExtResource("10_bmi18")]([SubResource("Resource_4qp5g"), SubResource("Resource_fwfcy")])
metadata/_custom_type_script = "uid://tciv72rns5sp"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dfcw6"]
shader = ExtResource("1_16406")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/width = 0.0
shader_parameter/pattern = 1
shader_parameter/inside = false
shader_parameter/add_margins = true

[sub_resource type="Resource" id="Resource_224h1"]
script = ExtResource("29_vjdc1")
node = NodePath("../BarUpgrades")
mineral = 0
amount = 0
stat_name = ""
stat_req = 0
movements = Dictionary[NodePath, Vector2]({})
metadata/_custom_type_script = "uid://b7stbnudt8tpk"

[sub_resource type="Resource" id="Resource_378xl"]
script = ExtResource("29_vjdc1")
node = NodePath("../MuteBlue")
mineral = 0
amount = 0
stat_name = ""
stat_req = 0
movements = Dictionary[NodePath, Vector2]({})
metadata/_custom_type_script = "uid://b7stbnudt8tpk"

[sub_resource type="Resource" id="Resource_xud10"]
script = ExtResource("29_vjdc1")
node = NodePath("../UltraUpgrades")
mineral = 0
amount = 0
stat_name = "blue_portion"
stat_req = 2
movements = Dictionary[NodePath, Vector2]({
NodePath("../BarUpgrades"): Vector2(0, 1)
})
metadata/_custom_type_script = "uid://b7stbnudt8tpk"

[node name="Scientist" type="Node2D"]

[node name="BG" parent="." instance=ExtResource("1_4exc4")]

[node name="FullSprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_42ln1")
position = Vector2(279, 117)
texture = ExtResource("2_20w5x")

[node name="CloseGarage" type="TextureButton" parent="."]
offset_left = 288.0
offset_right = 320.0
offset_bottom = 32.0
shortcut = SubResource("Shortcut_trrde")
texture_normal = ExtResource("15_6td8o")
texture_pressed = ExtResource("16_kuv6f")
texture_hover = ExtResource("17_rrjuj")
script = ExtResource("18_ekw30")
sound_effect = 3

[node name="MuteBlue" type="TextureButton" parent="."]
material = SubResource("ShaderMaterial_bmi18")
offset_left = 288.0
offset_top = 151.0
offset_right = 317.0
offset_bottom = 177.0
toggle_mode = true
texture_normal = SubResource("AtlasTexture_4exc4")
texture_pressed = SubResource("AtlasTexture_actut")
script = ExtResource("9_actut")

[node name="SpeechBubble" parent="." instance=ExtResource("8_1gt0o")]
position = Vector2(124, 38)
text_lines = Array[ExtResource("9_epx1j")]([SubResource("Resource_4exc4"), SubResource("Resource_actut"), SubResource("Resource_5bi7m"), SubResource("Resource_2tbd8"), SubResource("Resource_ybg0m"), SubResource("Resource_hm7ms"), SubResource("Resource_5oblf"), SubResource("Resource_oca6a"), SubResource("Resource_cp3ln"), SubResource("Resource_p7qk3"), SubResource("Resource_u7i1c"), SubResource("Resource_8rxbf"), SubResource("Resource_gv7fr"), SubResource("Resource_680q0"), SubResource("Resource_718em"), SubResource("Resource_lrqer")])

[node name="BarUpgrades" type="Node2D" parent="."]
position = Vector2(0, 42)
script = ExtResource("4_ova6q")

[node name="BarPanel" type="Sprite2D" parent="BarUpgrades"]
position = Vector2(3, 2)
texture = ExtResource("3_bea00")
centered = false

[node name="Bars" type="HBoxContainer" parent="BarUpgrades/BarPanel"]
anchors_preset = -1
anchor_right = 0.74569
offset_left = 7.0
offset_top = 7.13461
offset_right = 51.0
offset_bottom = 30.1346
grow_horizontal = 2
metadata/_edit_use_anchors_ = true

[node name="Red" parent="BarUpgrades/BarPanel/Bars" instance=ExtResource("4_s7j24")]
show_behind_parent = true
layout_mode = 2

[node name="Orange" parent="BarUpgrades/BarPanel/Bars" instance=ExtResource("4_s7j24")]
layout_mode = 2
colour = "orange"

[node name="Green" parent="BarUpgrades/BarPanel/Bars" instance=ExtResource("4_s7j24")]
layout_mode = 2
colour = "green"

[node name="Blue" parent="BarUpgrades/BarPanel/Bars" instance=ExtResource("4_s7j24")]
layout_mode = 2
colour = "blue"

[node name="NewPortion" type="TextureButton" parent="BarUpgrades/BarPanel/Bars"]
material = SubResource("ShaderMaterial_dfcw6")
layout_mode = 2
texture_normal = ExtResource("16_vjdc1")
script = ExtResource("17_7ufg2")

[node name="PriceHover" type="NinePatchRect" parent="BarUpgrades/BarPanel/Bars/NewPortion"]
z_index = -1
layout_mode = 0
offset_left = -36.0
offset_top = -5.13461
offset_right = 29.0
offset_bottom = 20.8654
texture = ExtResource("18_2tbd8")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="Label" type="Label" parent="BarUpgrades/BarPanel/Bars/NewPortion/PriceHover"]
layout_mode = 0
offset_left = 23.0
offset_top = 6.0
offset_right = 62.0
offset_bottom = 22.0
theme_override_fonts/font = ExtResource("19_wig7y")
text = "22.2m"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="BarUpgrades/BarPanel/Bars/NewPortion/PriceHover"]
layout_mode = 0
offset_left = 5.0
offset_top = 4.86539
offset_right = 23.0
offset_bottom = 20.8654
texture = ExtResource("13_kuv6f")
stretch_mode = 3

[node name="Damage" type="Node2D" parent="BarUpgrades"]
position = Vector2(-79, -33)

[node name="Stats" parent="BarUpgrades/Damage" node_paths=PackedStringArray("upgrade_button") instance=ExtResource("8_bsxwh")]
position = Vector2(137, 65)
upgrade_button = NodePath("../Button")
base_off_hover_location = Vector2(-15, 8)
base_on_hover_location = Vector2(-15, 1)
upgrade_location = Vector2(-22, -2)
texture = ExtResource("5_bea00")
font_colour = Color(0.180392, 0.133333, 0.184314, 1)
outline_colour = Color(0, 0, 0, 0)
upgrade_font_colour = Color(0.384314, 0.333333, 0.396078, 1)
upgrade_outline_colour = Color(0, 0, 0, 0)
upgrade_arrow_colour = Color(0.384314, 0.333333, 0.396078, 1)

[node name="Button" parent="BarUpgrades/Damage" instance=ExtResource("10_r447v")]
offset_left = 92.0
offset_top = 100.0
offset_right = 162.0
offset_bottom = 140.0
texture_normal = ExtResource("11_460r2")
texture_disabled = ExtResource("12_6td8o")
stat_name = "red_damage"
text_colour = Color(0.298039, 0.243137, 0.141176, 1)
bg_colour = Color(0.835294, 0.878431, 0.294118, 1)
text_offset = Vector2(-5, 0)
disables = true
mineral_enabled = ExtResource("13_kuv6f")
mineral_disabled = ExtResource("14_rrjuj")
show_upgrade_name = false
metadata/_edit_use_anchors_ = true

[node name="Portion" type="Node2D" parent="BarUpgrades"]
position = Vector2(-79, -33)

[node name="Stats" parent="BarUpgrades/Portion" node_paths=PackedStringArray("upgrade_button") instance=ExtResource("8_bsxwh")]
position = Vector2(209, 65)
upgrade_button = NodePath("../Button")
base_off_hover_location = Vector2(-15, 8)
base_on_hover_location = Vector2(-15, 1)
upgrade_location = Vector2(-22, -2)
texture = ExtResource("6_hoinn")
font_colour = Color(0.180392, 0.133333, 0.184314, 1)
outline_colour = Color(0, 0, 0, 0)
upgrade_font_colour = Color(0.384314, 0.333333, 0.396078, 1)
upgrade_outline_colour = Color(0, 0, 0, 0)
upgrade_arrow_colour = Color(0.384314, 0.333333, 0.396078, 1)

[node name="Button" parent="BarUpgrades/Portion" instance=ExtResource("10_r447v")]
offset_left = 164.0
offset_top = 100.0
offset_right = 234.0
offset_bottom = 140.0
texture_normal = ExtResource("11_460r2")
texture_disabled = ExtResource("12_6td8o")
stat_name = "red_portion"
text_colour = Color(0.298039, 0.243137, 0.141176, 1)
bg_colour = Color(0.835294, 0.878431, 0.294118, 1)
text_offset = Vector2(-5, 0)
disables = true
mineral_enabled = ExtResource("13_kuv6f")
mineral_disabled = ExtResource("14_rrjuj")
show_upgrade_name = false
metadata/_edit_use_anchors_ = true

[node name="Yield" type="Node2D" parent="BarUpgrades"]
position = Vector2(-79, -33)

[node name="Stats" parent="BarUpgrades/Yield" node_paths=PackedStringArray("upgrade_button") instance=ExtResource("8_bsxwh")]
position = Vector2(281, 65)
upgrade_button = NodePath("../Button")
base_off_hover_location = Vector2(-15, 8)
base_on_hover_location = Vector2(-15, 1)
upgrade_location = Vector2(-22, -2)
texture = ExtResource("7_gqo72")
font_colour = Color(0.180392, 0.133333, 0.184314, 1)
outline_colour = Color(0, 0, 0, 0)
upgrade_font_colour = Color(0.384314, 0.333333, 0.396078, 1)
upgrade_outline_colour = Color(0, 0, 0, 0)
upgrade_arrow_colour = Color(0.384314, 0.333333, 0.396078, 1)

[node name="Button" parent="BarUpgrades/Yield" instance=ExtResource("10_r447v")]
offset_left = 236.0
offset_top = 100.0
offset_right = 306.0
offset_bottom = 140.0
texture_normal = ExtResource("11_460r2")
texture_disabled = ExtResource("12_6td8o")
stat_name = "red_yield"
text_colour = Color(0.298039, 0.243137, 0.141176, 1)
bg_colour = Color(0.835294, 0.878431, 0.294118, 1)
text_offset = Vector2(-5, 0)
disables = true
mineral_enabled = ExtResource("13_kuv6f")
mineral_disabled = ExtResource("14_rrjuj")
show_upgrade_name = false
metadata/_edit_use_anchors_ = true

[node name="UltraUpgrades" type="Node2D" parent="."]
visible = false

[node name="UltraPanel" type="Sprite2D" parent="UltraUpgrades"]
position = Vector2(119, 142)
texture = ExtResource("16_ekw30")

[node name="Replenish" type="Node2D" parent="UltraUpgrades"]
position = Vector2(-82, 45)

[node name="Stats" parent="UltraUpgrades/Replenish" node_paths=PackedStringArray("upgrade_button") instance=ExtResource("8_bsxwh")]
position = Vector2(137, 65)
upgrade_button = NodePath("../Button")
base_off_hover_location = Vector2(-15, 8)
base_on_hover_location = Vector2(-15, 1)
upgrade_location = Vector2(-22, -2)
texture = ExtResource("21_trrde")
font_colour = Color(0.180392, 0.133333, 0.184314, 1)
outline_colour = Color(0, 0, 0, 0)
upgrade_font_colour = Color(0.384314, 0.333333, 0.396078, 1)
upgrade_outline_colour = Color(0, 0, 0, 0)
upgrade_arrow_colour = Color(0.384314, 0.333333, 0.396078, 1)

[node name="Button" parent="UltraUpgrades/Replenish" instance=ExtResource("10_r447v")]
offset_left = 100.0
offset_top = 100.0
offset_right = 170.0
offset_bottom = 140.0
texture_normal = ExtResource("11_460r2")
texture_disabled = ExtResource("12_6td8o")
stat_name = "bar_replenish"
text_colour = Color(0.298039, 0.243137, 0.141176, 1)
bg_colour = Color(0.835294, 0.878431, 0.294118, 1)
text_offset = Vector2(-5, 0)
disables = true
mineral_enabled = ExtResource("13_kuv6f")
mineral_disabled = ExtResource("14_rrjuj")
show_upgrade_name = false
metadata/_edit_use_anchors_ = true

[node name="Boost" type="Node2D" parent="UltraUpgrades"]
position = Vector2(-39, 45)

[node name="Stats" parent="UltraUpgrades/Boost" node_paths=PackedStringArray("upgrade_button") instance=ExtResource("8_bsxwh")]
position = Vector2(209, 65)
upgrade_button = NodePath("../Button")
base_off_hover_location = Vector2(0, 8)
base_on_hover_location = Vector2(0, 1)
upgrade_location = Vector2(-7, -2)
texture = ExtResource("21_ekw30")
font_colour = Color(0.180392, 0.133333, 0.184314, 1)
outline_colour = Color(0, 0, 0, 0)
upgrade_font_colour = Color(0.384314, 0.333333, 0.396078, 1)
upgrade_outline_colour = Color(0, 0, 0, 0)
upgrade_arrow_colour = Color(0.384314, 0.333333, 0.396078, 1)

[node name="Button" parent="UltraUpgrades/Boost" instance=ExtResource("10_r447v")]
offset_left = 176.0
offset_top = 100.0
offset_right = 246.0
offset_bottom = 140.0
texture_normal = ExtResource("11_460r2")
texture_disabled = ExtResource("12_6td8o")
stat_name = "rock_boost"
text_colour = Color(0.298039, 0.243137, 0.141176, 1)
bg_colour = Color(0.835294, 0.878431, 0.294118, 1)
text_offset = Vector2(-5, 0)
disables = true
mineral_enabled = ExtResource("13_kuv6f")
mineral_disabled = ExtResource("14_rrjuj")
show_upgrade_name = false
metadata/_edit_use_anchors_ = true

[node name="PositionManager" parent="." node_paths=PackedStringArray("speech_bubble") instance=ExtResource("28_i3aeo")]
details = Array[ExtResource("29_vjdc1")]([SubResource("Resource_224h1"), SubResource("Resource_378xl"), SubResource("Resource_xud10")])
listening_state = 4
speech_bubble = NodePath("../SpeechBubble")

[connection signal="pressed" from="CloseGarage" to="." method="_on_close_garage_pressed"]
[connection signal="pressed" from="CloseGarage" to="CloseGarage" method="_on_pressed"]
[connection signal="mouse_entered" from="BarUpgrades/BarPanel/Bars/NewPortion" to="BarUpgrades/BarPanel/Bars/NewPortion" method="show_price"]
[connection signal="mouse_exited" from="BarUpgrades/BarPanel/Bars/NewPortion" to="BarUpgrades/BarPanel/Bars/NewPortion" method="hide_price"]
[connection signal="pressed" from="BarUpgrades/BarPanel/Bars/NewPortion" to="BarUpgrades/BarPanel/Bars/NewPortion" method="_on_pressed"]
